feat: some playlist functionality added, login and register functions restructured
