# backend/src/messages/RequestPlaylistCreate.ts
@@ -1,0 +1,8 @@
+export interface RequestPlaylistCreate {
+    session_hash: string;
+    user_id: string;
+    request_hash: string;
+    timestamp: number;
+    title: string;
+    description: string;
+}
