# backend/src/messages/RequestPlaylistsGetAll.ts
@@ -1,0 +1,6 @@
+export interface RequestPlaylistsGetAll {
+    session_hash: string;
+    user_id: string;
+    request_hash: string;
+    timestamp: number;
+}
