# backend/src/messages/RequestUserLogin.ts
@@ -1,6 +1,6 @@
 export interface RequestUserLogin {
-    request_hash: string
-    timestamp: number
-    username: string
-    password_hash: string
+    request_hash: string;
+    timestamp: number;
+    username: string;
+    password_hash: string;
 }
