# backend/src/messages/RequestUserRegister.ts
@@ -1,6 +1,6 @@
 export interface RequestUserRegister {
-    request_hash: string
-    timestamp: number
-    username: string
-    password_hash: string
+    request_hash: string;
+    timestamp: number;
+    username: string;
+    password_hash: string;
 }
