# backend/src/messages/ResponsePlaylistCreate.ts
@@ -1,5 +1,5 @@
-export interface ResponseUserRegister {
-    user_id: string;
+export interface ResponsePlaylistCreate {
+    playlist_id: string;
     is_success: boolean;
     error_code: number;
     error_msg: string;
