# backend/src/messages/ResponseUserLogin.ts
@@ -1,7 +1,7 @@
 export interface ResponseUserLogin {
     session_hash: string
-    user_id: string
-    is_success: boolean
-    error_code: number
-    error_msg: string
+    user_id: string;
+    is_success: boolean;
+    error_code: number;
+    error_msg: string;
 }
